sfdx-source/nca-watrs/main/objects/NCA_AMAS_Report_Entry__c/NCA_AMAS_Report_Entry__c.object-meta.xml
<CustomObject>
    <label>NCA AMAS Report Entry</label>
    <nameField>
        <displayFormat>VR-{0000000000}</displayFormat>
        <label>NCA VATA Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCA AMAS Report Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>