sfdx-source/nca-watrs/main/objects/NCA_AMAS_Report_Entry__c/fields/AMAS_ID__c.field-meta.xml
<CustomField>
    <fullName>AMAS_ID__c</fullName>
    <label>AMAS ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>