sfdx-source/nca-watrs/main/objects/NCA_AMAS_Report_Entry__c/fields/Assembly_Dt__c.field-meta.xml
<CustomField>
    <fullName>Assembly_Dt__c</fullName>
    <inlineHelpText>Date Format: mm/dd/yyyy</inlineHelpText>
    <label>Assembly Dt</label>
    <type>Date</type>
</CustomField>