sfdx-source/nca-watrs/main/objects/NCA_AMAS_Report_Entry__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>Author</label>
    <length>100</length>
    <type>Text</type>
</CustomField>