sfdx-source/nca-watrs/main/objects/NCA_AMAS_Report_Entry__c/fields/Created_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_and_Time__c</fullName>
    <inlineHelpText>Date Format: mm/dd/yyyy</inlineHelpText>
    <label>Created Date and Time</label>
    <type>Date</type>
</CustomField>