sfdx-source/nca-watrs/main/objects/NCA_AMAS_Report_Entry__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>NCA_VATA_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>