sfdx-source/nca-watrs/main/objects/NCA_AMAS_Report_Entry__c/fields/Insert_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Insert_User_Id__c</fullName>
    <label>Insert User Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>