sfdx-source/nca-watrs/main/objects/NCA_AMAS_Report_Entry__c/fields/Letter_Code__c.field-meta.xml
<CustomField>
    <fullName>Letter_Code__c</fullName>
    <label>Letter Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>