sfdx-source/nca-watrs/main/objects/NCA_AMAS_Report_Entry__c/fields/NCA_Contact__c.field-meta.xml
<CustomField>
    <fullName>NCA_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCA Contact</label>
    <referenceTo>NCA_WATRS_Contact__c</referenceTo>
    <relationshipLabel>NCA AMAS Report Entries</relationshipLabel>
    <relationshipName>NCA_AMAS_Report_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>