sfdx-source/nca-watrs/main/objects/NCA_AMAS_Report_Entry__c/fields/NCA_Production__c.field-meta.xml
<CustomField>
    <fullName>NCA_Production__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCA Production</label>
    <referenceTo>NCA_Production__c</referenceTo>
    <relationshipName>NCA_VATA_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>