sfdx-source/nca-watrs/main/objects/NCA_AMAS_Report_Entry__c/fields/Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Reason__c</fullName>
    <label>Return Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>