sfdx-source/nca-watrs/main/objects/NCA_AMAS_Report_Entry__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <label>Site Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>