sfdx-source/nca-watrs/main/objects/NCA_AMAS_Report_Entry__c/fields/Site_Nme__c.field-meta.xml
<CustomField>
    <fullName>Site_Nme__c</fullName>
    <label>Site Nme</label>
    <type>TextArea</type>
</CustomField>