sfdx-source/nca-watrs/main/objects/NCA_AMAS_Report_Entry__c/fields/Today__c.field-meta.xml
<CustomField>
    <fullName>Today__c</fullName>
    <label>Today</label>
    <type>Date</type>
</CustomField>