sfdx-source/nca-watrs/main/objects/NCA_AMAS_Report_Entry__c/fields/Veteran_Id__c.field-meta.xml
<CustomField>
    <fullName>Veteran_Id__c</fullName>
    <label>Veteran Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>