sfdx-source/nca-watrs/main/objects/NCA_AMAS_Report_Entry__c/fields/Work_Completed_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Work_Completed_Date_and_Time__c</fullName>
    <inlineHelpText>Date Format: mm/dd/yyyy</inlineHelpText>
    <label>Work Completed Date and Time</label>
    <type>Date</type>
</CustomField>