sfdx-source/nca-watrs/main/objects/NCA_AMAS_Report_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approver__c</columns>
    <columns>Duplicate_Record__c</columns>
    <columns>Letter_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>